RESOLVED FIXED110233
HeapBlock::destroy should issue warning if result is unused
https://bugs.webkit.org/show_bug.cgi?id=110233
Summary HeapBlock::destroy should issue warning if result is unused
Mark Hahnenberg
Reported 2013-02-19 09:39:01 PST
To enforce the fact that we need to return blocks to the BlockAllocator after calling destroy, we should add WARN_UNUSED_RETURN to HeapBlock::destroy and any other destroy functions in its subclasses.
Attachments
Patch (1.35 KB, patch)
2013-02-19 10:22 PST, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2013-02-19 10:22:43 PST
WebKit Review Bot
Comment 2 2013-02-19 10:41:48 PST
Comment on attachment 189109 [details] Patch Clearing flags on attachment: 189109 Committed r143354: <http://trac.webkit.org/changeset/143354>
WebKit Review Bot
Comment 3 2013-02-19 10:41:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.