HeapBlock::destroy should issue warning if result is unused https://bugs.webkit.org/show_bug.cgi?id=110233

Reviewed by Oliver Hunt.

To enforce the fact that we need to return blocks to the BlockAllocator after calling destroy,
we should add WARN_UNUSED_RETURN to HeapBlock::destroy and any other destroy functions in its subclasses.

* heap/HeapBlock.h:


Canonical link: https://commits.webkit.org/128541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143354 268f45cc-cd09-0410-ab3c-d52691b4dbfc